# itsme2

./: .gitignore  gradle.properties  local.properties
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_decoder.cpp  libyuv_wrapper.cpp
app/src/main/java/com/itsme/amkush/: AppState.kt  CameraState.kt  FaceGateApplication.kt  MainHook.kt
app/src/main/java/com/itsme/amkush/ffmpeg/: FFmpegDecoder.kt
app/src/main/java/com/itsme/amkush/hooks/: AntiXposedHooks.kt  Camera1Hooks.kt  Camera2Hooks.kt  CameraXHooks.kt  ClonerBypassHooks.kt  DenyListHooks.kt  DeviceSpoofHooks.kt  EmulatorBypassHooks.kt  ExifSpoofHooks.kt  FakeCameraObjects.kt  InjectionServiceClient.kt  IntentCaptureHooks.kt  RootBypassHooks.kt  SELinuxBypassHooks.kt
app/src/main/java/com/itsme/amkush/libyuv/: LibYuv.kt
app/src/main/java/com/itsme/amkush/network/: ApiClient.kt
app/src/main/java/com/itsme/amkush/router/: SurfaceRouter.kt
app/src/main/java/com/itsme/amkush/services/: InjectionService.kt
app/src/main/java/com/itsme/amkush/ui/: HomeScreen.kt  HomeViewModel.kt  PaymentScreen.kt  SplashScreenActivity.kt  StreamPreviewDialog.kt  TabsScreen.kt
app/src/main/java/com/itsme/amkush/ui/fragments/: HomeFragment.kt  MediaFragment.kt  StreamSetupFragment.kt
app/src/main/java/com/itsme/amkush/utils/: Logger.kt  SharedPrefs.kt
app/src/main/res/xml/: network_security_config.xml
